fix import file api
